--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -38,6 +38,16 @@
     color: #424242;
 }
 
+.questionAlinha {
+    border: none; 
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid red;
+    position: relative;
+    padding: 24px;
+}
+
 .questionInputBottomBorder {
     position: absolute;
     width: 100%;
