retirando input e azdup

--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -46,6 +46,9 @@
     position: relative;
     padding: 24px;
 }
+.container-speak {
+    border: 2px solid red;
+}
 
 .questionInputBottomBorder {
     position: absolute;
