--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -47,7 +47,13 @@
     padding: 24px;
 }
 .container-speak {
-    border: 2px solid red;
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
+    margin-top: 30px;
+}
+.container-speak select {
+    
 }
 
 .questionInputBottomBorder {
