--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -51,9 +51,10 @@
     gap: 15px;
     flex-direction: column;
     margin-top: 30px;
+    border: 1px solid red;
 }
 .container-speak select {
-    
+    border: 1px solid green;
 }
 
 .questionInputBottomBorder {
