--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -61,6 +61,11 @@
     background: none;
     width: 20%;  */
 }
+.buttonContainer {
+    background: none;
+    border: none; 
+    padding: 0
+}
 
 .questionInputBottomBorder {
     position: absolute;
