--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -50,7 +50,7 @@
     display: flex;
     gap: 15px;
     flex-direction: column;
-    margin-top: 20px;
+    margin-top: 20px
 }
 .buttonContainer {
     background: none;
